<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">
    <ImageView
        android:id="@+id/ilustration_login"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/logo"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/title_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ilustration_login" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:drawableStart="@drawable/ic_account"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_sign_in" />


    <com.qtn.doinsome.customview.EditTextEmail
        android:id="@+id/ed_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_username" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_password"
        android:importantForAutofill="auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_email"
        android:autofillHints="" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ed_born"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:drawablePadding="20dp"
        android:focusable="false"
        android:clickable="false"
        android:onClick="SelectDate"
        android:cursorVisible="false"
        android:hint="@string/born_date"
        android:drawableStart="@drawable/ic_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_password"
        />


    <Button
        style="@style/Widget.Material3.Button"
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAppearance="?attr/textAppearanceButton"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_born" />


    <Button
        android:id="@+id/btn_have_account"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:textSize="12sp"
        android:text="@string/have_an_account_login_here"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>